deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api
  namespace: go-scaling-lab
spec:
  type: ClusterIP
  selector:
    app: go-api
  ports:
    - port: 80
      targetPort: 8080
